perf: scale PR A — dashboard, OSIV off, lease list N+1, paged/search endpoints, indexes (#366)
* perf(backend): dashboard overdue, register due tiles and cheque aging in one SQL statement each (scale P1-9, P1-10)

The dashboard walked every due cheque (findDue unpaged), loaded each lease and
each bounced lease's receivable ledger: ~9,500 statements per load at 8,000
units. The register summary and the aging report did the same walk. Now one
native CTE computes each due row's open amount (BouncedDebt's newest-first
allocation of the lease receivable) and lateness (chequeDate + grace < today),
tenant bound explicitly; the aging report reads its rows and names from the same
statement. Recent activity fetch-joins unit and property.

Parity test: SQL equals the per-row rule on a lease with two bounces and a part
payment (mutation-checked: dropping the allocation fails it).

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>

* chore(scale): scale-test seeder, timing, backend launcher and GET crawler (spec 2026-09-25 scale track)

seed_scale.py builds 8,000 units x 3 years through the public API; measure.py
times the daily endpoints (p50/p95, size, Hibernate statement counts);
run_backend.sh starts a :8082 backend against rentaxis_scale; crawl_gets.py
calls every GET endpoint whose path variables it can fill and reports 5xx
(used to find LazyInitializationExceptions with open-session-in-view off).

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>

* perf(backend): open-session-in-view off; tenant filter no longer rests on it (scale P1-11)

With OSIV on, every entity a long request loaded stayed in its session and each
flush dirty-checked all of them: a month-end recognition run of ~1,900 entries
took 315 s, clear-batch ran ~8x slower. spring.jpa.open-in-view is now false.

OSIV was also what made untransacted repository reads tenant-filtered over HTTP
(TenantAspect enables the filter on the transaction's session). TenantAspect now
gives a repository call made 